Integrate REST caller and JSON mapper generation into crysknife processor
RestCallerGenerator now internally invokes jakarta4g-rest InterfaceParser/
Validator/Generator and json-mapper BeanProcessor when it encounters
@Inject Caller<T>. Users no longer need to add jakarta-rest:processor or
json-mapper:processor as separate dependencies — crysknife-ui-rest-generator
handles everything.

Key changes:
- Shade jakarta-rest and json-mapper processor classes into rest-generator
  jar (optional deps, META-INF/services stripped to prevent auto-discovery)
- Add json-mapper:common as transitive dep via crysknife-ui-rest-api
- Simplify test modules: remove redundant processor dependencies and
  unnecessary annotationProcessorPaths entries
- Update README REST section from 7 dependencies to 2 + 1 processor path

Signed-off-by: Dmitrii Tikhomirov <chani.liet@gmail.com>