@@ -15,12 +15,17 @@
 package io.crysknife.ui.rest.generator;
 
 import java.util.ArrayList;
+import java.util.HashSet;
 import java.util.List;
+import java.util.Set;
 
 import jakarta.inject.Inject;
 import jakarta.inject.Named;
 import javax.lang.model.element.AnnotationMirror;
+import javax.lang.model.element.TypeElement;
+import javax.lang.model.type.ArrayType;
 import javax.lang.model.type.DeclaredType;
+import javax.lang.model.type.TypeKind;
 import javax.lang.model.type.TypeMirror;
 
 import com.github.javaparser.ast.expr.FieldAccessExpr;
@@ -37,11 +42,22 @@ import io.crysknife.generator.api.WiringElementType;
 import io.crysknife.generator.context.IOCContext;
 import io.crysknife.logger.TreeLogger;
 import io.crysknife.util.TypeUtils;
+import org.treblereel.gwt.json.mapper.apt.context.GenerationContext;
+import org.treblereel.gwt.json.mapper.apt.logger.PrintWriterTreeLogger;
+import org.treblereel.gwt.json.mapper.apt.processor.BeanProcessor;
+import org.treblereel.gwt.rest.apt.definition.ParamType;
+import org.treblereel.gwt.rest.apt.definition.RestInterfaceDefinition;
+import org.treblereel.gwt.rest.apt.definition.RestMethodDefinition;
+import org.treblereel.gwt.rest.apt.definition.RestParamDefinition;
+import org.treblereel.gwt.rest.apt.parser.InterfaceParser;
+import org.treblereel.gwt.rest.apt.validation.InterfaceValidator;
 import org.treblereel.gwt.rest.client.Caller;
 import org.treblereel.gwt.rest.client.RestConfig;
 
 @Generator(priority = 100001)
 public class RestCallerGenerator extends IOCGenerator<BeanDefinition> {
+
+    private final Set<String> generatedCallers = new HashSet<>();
 
     public RestCallerGenerator(TreeLogger treeLogger, IOCContext iocContext) {
         super(treeLogger, iocContext);
@@ -56,8 +72,10 @@ public class RestCallerGenerator extends IOCGenerator<BeanDefinition> {
     @Override
     public String generateBeanLookupCall(InjectableVariableDefinition fieldPoint) {
         DeclaredType declaredType = (DeclaredType) fieldPoint.getVariableElement().asType();
-        TypeMirror typeArg = declaredType.getTypeArguments().get(0);
+        TypeMirror typeArg = declaredType.getTypeArguments().getFirst();
         String callerImplQualifiedName = typeArg.toString() + "_RestCaller";
+
+        generateRestCaller((TypeElement) ((DeclaredType) typeArg).asElement());
 
         MethodCallExpr lookupCall = new MethodCallExpr(new NameExpr("beanManager"), "lookupBean")
                 .addArgument(new FieldAccessExpr(
@@ -84,5 +102,77 @@ public class RestCallerGenerator extends IOCGenerator<BeanDefinition> {
                 .addArgument(lookupRestConfig);
 
         return generationUtils.wrapCallInstanceImpl(newCaller).toString();
+    }
+
+    private void generateRestCaller(TypeElement serviceElement) {
+        String qualifiedName = serviceElement.getQualifiedName().toString();
+        if (!generatedCallers.add(qualifiedName)) {
+            return;
+        }
+
+        InterfaceParser parser = new InterfaceParser();
+        RestInterfaceDefinition definition = parser.parse(serviceElement);
+
+        InterfaceValidator validator = new InterfaceValidator(
+                iocContext.getGenerationContext().getProcessingEnvironment().getMessager());
+        if (!validator.validate(serviceElement, definition)) {
+            return;
+        }
+
+        org.treblereel.gwt.rest.apt.generator.RestCallerGenerator generator =
+                new org.treblereel.gwt.rest.apt.generator.RestCallerGenerator(
+                        iocContext.getGenerationContext().getProcessingEnvironment().getFiler(),
+                        iocContext.getGenerationContext().getProcessingEnvironment().getMessager());
+        generator.generate(definition);
+
+        generateJsonMappers(definition);
+
+        logger.log(TreeLogger.INFO, "Generated REST caller for " + qualifiedName);
+    }
+
+    private void generateJsonMappers(RestInterfaceDefinition definition) {
+        Set<TypeElement> modelTypes = new HashSet<>();
+
+        for (RestMethodDefinition method : definition.getMethods()) {
+            collectModelType(method.getEffectiveReturnType(), modelTypes);
+            for (RestParamDefinition param : method.getParams()) {
+                if (param.getParamType() == ParamType.BODY) {
+                    collectModelType(param.getType(), modelTypes);
+                }
+            }
+        }
+
+        if (modelTypes.isEmpty()) {
+            return;
+        }
+
+        GenerationContext jsonContext = new GenerationContext(
+                iocContext.getGenerationContext().getRoundEnvironment(),
+                iocContext.getGenerationContext().getProcessingEnvironment());
+
+        BeanProcessor beanProcessor = new BeanProcessor(jsonContext, new PrintWriterTreeLogger(), modelTypes);
+        beanProcessor.process();
+    }
+
+    private void collectModelType(TypeMirror type, Set<TypeElement> types) {
+        if (type == null || type.getKind().isPrimitive() || type.getKind() == TypeKind.VOID) {
+            return;
+        }
+        if (type.getKind() == TypeKind.ARRAY) {
+            collectModelType(
+                    ((ArrayType) type).getComponentType(), types);
+            return;
+        }
+        if (type instanceof DeclaredType) {
+            DeclaredType dt = (DeclaredType) type;
+            TypeElement element = (TypeElement) dt.asElement();
+            String qname = element.getQualifiedName().toString();
+            if (!qname.startsWith("java.") && !qname.startsWith("jakarta.")) {
+                types.add(element);
+            }
+            for (TypeMirror arg : dt.getTypeArguments()) {
+                collectModelType(arg, types);
+            }
+        }
     }
 }
